# MPU6050picoGame

./: .gitignore  README.md  pitchRollGame.qbs
pitchRollControler/: CMakeLists.txt  main.cpp
src/: entity.h  main.cpp  ofApp.cpp  ofApp.h
